DHParser Version 0.9.5
......................

- batch processing: just use several files or a directory or a
  shell pattern as parameters for the xxxParser.py or xxxServer.py-Skripts
- DHParser.compile.Compiler is now more tolerant w.r.t to compiler-methods
  that manipulate the parent tree (`fallback_compiler`-method rewritten)
- DHParser.syntaxtree: added "skip_subtree"-parameter to Node.select-methods
- DHParser.syntaxtree: more functions for navigating contexts, e.g.
  prev_context, next_context.
- DHParser.syntaxtree: added insert() and remove() methods to Node class
- DHParser.syntaxtree: added a mini API for manipulating attributes
- DHParser.parse: added early horizontal tree-reduction to class CombinedParser
- DHParser.ebnf: added ""@reduction"-directive

DHParser Version 0.9.4 (6.10.2020)
..................................

- better Language server support (modules server.py and lsp.py - still
  somewhat experimental)
- language servers can now also be connected via streams, not only tcp
- Rudimentary Language Server example (for Visual Studio Code etc.) in 
  examples/EBNF added
- faster tree serialiazation with Node.as_sxpr or Node.as_xml


DHParser Version 0.9.3 (23.6.2020)
..................................

- Complete refactoring of left-recursion algorithm. No performance surprises
  or running out of stack space any more (see parse.Forward.__call__())
- transform functions now try to keep error messages attached to nodes when
  reshaping tree (see transform.update_attr())
- now using argparse instead of hand-written code for argument parsing


DHParser Version 0.9.2 (11.5.2020)
..................................

- Moved to poetry-packaging <https://github.com/python-poetry/poetry>


DHParser Version 0.9.1 (8.5.2020)
.................................

- Support for various variants of EBNF-Grammars (see examples/EBNF/grammar_examples)
- More static error checking for EBNF-Grammars