@@ -50,7 +50,7 @@ column-number
 import os
 from typing import Iterable, Iterator, Union, List, Any, Sequence, Tuple
 
-from DHParser.preprocess import SourceMapFunc
+from DHParser.preprocess import SourceMapFunc, neutral_mapping
 from DHParser.stringview import StringView
 from DHParser.toolkit import linebreaks, line_col, is_filename
 
@@ -180,6 +180,31 @@ RECURSION_DEPTH_LIMIT_HIT                = ErrorCode(10400)
 class Error:
     """The Error class encapsulates the all information for a single
     error.
+
+    :ivar message:  the error message as text string
+    :ivar pos:  the position where the error occurred in the preprocessed text
+    :ivar code:  the error-code, which also indicates the severity of the
+        error. 0:        no error
+               < 100:    notice
+               < 1000:   warning
+               < 10000:  error
+               >= 10000: fatal error. syntax tree will not be passed on to
+                         the next compilation stage!
+    :ivar orig_pos:  the position of the error in the original source file,
+        not in the preprocessed document.
+    :ivar orig_doc:  the name or path or url of the original source file to
+        which ``orig_pos`` is related. This is relevant, if the preprocessed
+        document has been plugged together from several source files.
+    :ivar line:  the line number where the error occurred in the original text.
+        Lines are counted from 1 onward.
+    :ivar column:  the column where the error occurred in the original text.
+        Columns are counted from 1 onward.
+    :ivar length:  the length in characters of the faulty passage (default is 1)
+    :ivar end_line:  the line number of the position after the last character
+        covered by the error in the original source.
+    :ivar end_column:  the column number of the position after the last character
+        covered by the error in the original source.
+    :ivar related: a sequence of related errors.
     """
 
     __slots__ = ['message', 'code', '_pos', 'line', 'column', 'length',
@@ -188,7 +213,7 @@ class Error:
 
     def __init__(self, message: str, pos: int, code: ErrorCode = ERROR,
                  line: int = -1, column: int = -1, length: int = 1,
-                 related: Sequence[Tuple['Error', str]] = [],
+                 related: Sequence['Error'] = [],
                  orig_pos: int = -1, orig_doc: str = '') -> None:
         assert isinstance(code, ErrorCode)
         assert not isinstance(pos, ErrorCode)
@@ -209,7 +234,7 @@ class Error:
         self.length = length      # type: int
         self.end_line = -1        # type: int
         self.end_column = -1      # type: int
-        self.related = tuple(related)   # type: Sequence[Tuple['Error', str]]
+        self.related = tuple(related)   # type: Sequence['Error']
 
     def __str__(self):
         prefix = ''
@@ -267,11 +292,11 @@ class Error:
         """Returns the Error as as Language Server Protocol Diagnostic object.
         https://microsoft.github.io/language-server-protocol/specifications/specification-current/#diagnostic
         """
-        def relatedObj(relatedError: Sequence[Tuple['Error', str]]) -> dict:
-            err, uri = relatedError
+        def relatedObj(relatedError: 'Error') -> dict:
+            uri = relatedError.orig_doc
             return {
-                'location': {'uri': uri, 'range': err.rangeObj()},
-                'message': err.message
+                'location': {'uri': uri, 'range': relatedError.rangeObj()},
+                'message': relatedError.message
             }
 
         if self.code < WARNING:
@@ -354,7 +379,7 @@ def only_errors(messages: Iterable[Error], level: int = ERROR) -> Iterator[Error
 
 def adjust_error_locations(errors: List[Error],
                            original_text: Union[StringView, str],
-                           source_mapping: SourceMapFunc = lambda i: i):
+                           source_mapping: SourceMapFunc = neutral_mapping):
     """Adds (or adjusts) line and column numbers of error messages inplace.
 
     Args:
@@ -368,7 +393,7 @@ def adjust_error_locations(errors: List[Error],
     line_breaks = linebreaks(original_text)
     for err in errors:
         assert err.pos >= 0
-        err.orig_pos = source_mapping(err.pos)
+        err.orig_doc, err.orig_pos = source_mapping(err.pos)
         err.line, err.column = line_col(line_breaks, err.orig_pos)
         # adjust length in case it exceeds the text size. As this is non-fatal
         # it should be adjusted rather than an error raised to avoid
