@@ -1,6 +1,9 @@
 DHParser Version 0.9.5
 ......................
 
+- Python 3.5 compatibility dropped! DHParser now requires at least Python 3.6.
+  This allows to use typing.NamedTuples and dataclasses for a clearer
+  expression of types.
 - batch processing: just use several files or a directory or a
   shell pattern as parameters for the xxxParser.py or xxxServer.py-Skripts
 - DHParser.compile.Compiler is now more tolerant w.r.t to compiler-methods
@@ -12,6 +15,7 @@ DHParser Version 0.9.5
 - DHParser.syntaxtree: added a mini API for manipulating attributes
 - DHParser.parse: added early horizontal tree-reduction to class CombinedParser
 - DHParser.ebnf: added ""@reduction"-directive
+
 
 DHParser Version 0.9.4 (6.10.2020)
 ..................................
